objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction</relationshipLabel>
        <relationshipName>Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Purchase__c</fullName>
        <label>Description of Purchase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount__c</fullName>
        <label>Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchaser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchaser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction</relationshipLabel>
        <relationshipName>Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction</label>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>